# My_personal_commits

./: AND_OR_XOR_COMPLIMENT.c  Array_Reversal.c  CMakeLists.txt  Calculate_the_Nth_term.c  File_Copying.c  Largest.c  Lucky_Number.c  Marks_of_Boys_and_Girls.c  New.c  Number_of_words.c  Pattern.c  Pattern2.c  README.md  Random_Formation.c  Size.c  Special Number.c  Swapping_funny.py  Switch.c  Trimming_Left.c  main.c  sortingDigitsInANumber.c  sum.c
