cmake_minimum_required(VERSION 3.19)
project(Hello_World C)

set(CMAKE_C_STANDARD 99)

add_executable(HelloWorld main.c )
add_executable(HelloWorld1 sum.c)
add_executable(HelloWorld2 New.c)
add_executable(H Largest.c)
add_executable(H1 Size.c)
add_executable(H2 File_Copying.c)
add_executable(H3 Number_of_words.c)
add_executable(H4 Trimming_Left.c)
add_executable(H5 Pattern.c)
add_executable(H6 Pattern2.c)
add_executable(H7 AND_OR_XOR_COMPLIMENT.c)
add_executable(H8 Calculate_the_Nth_term.c)
add_executable(H9 Array_Reversal.c)
add_executable(H10 Marks_of_Boys_and_Girls.c)
add_executable(HH Random_Formation.c)
add_executable(Switch Switch.c)