cmake_minimum_required(VERSION 3.19)
project(Hello_World C)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c )
add_executable(sum sum.c)
add_executable(New New.c)
add_executable(Largest Largest.c)
add_executable(Size Size.c)
add_executable(File_Copying File_Copying.c)
add_executable(Number_of_words Number_of_words.c)
add_executable(Trimming_Left Trimming_Left.c)
add_executable(Pattern Pattern.c)
add_executable(Pattern2 Pattern2.c)
add_executable(AND_OR_XOR_COMPLIMENT AND_OR_XOR_COMPLIMENT.c)
add_executable(Calculate_the_Nth_term Calculate_the_Nth_term.c)
add_executable(Array_Reversal Array_Reversal.c)
add_executable(Marks_of_Boys_and_Girls Marks_of_Boys_and_Girls.c)
add_executable(Random_Formation Random_Formation.c)
add_executable(Switch Switch.c)
add_executable(Day_13_Question_3 Day_13_Question_3.c)
add_executable(Day_13_Question_2 Day_13_Question_2.c)
add_executable(Day_13_Question_4 Day_13_Question_4.c)
add_executable(Day_13_Question_5 Day_13_Question_5.c)
add_executable(Day_13_Question_6 Day_13_Question_6.c)
add_executable(Day_13_Question_7 Day_13_Question_7.c)
add_executable(Day_13_Question_8 Day_13_Question_8.c)
add_executable(Day_13_Question_9 Day_13_Question_9.c)
add_executable(Day_13_Question_10 Day_13_Question_10.c)
add_executable(SpecialNumber specialNumber.c)
add_executable(Lucky Lucky_Number.c)
add_executable(sortingDigitsInANumber sortingDigitsInANumber.c)